# managemytime

./: .ghci  .gitignore  .travis.yml  README.md  TODO  bower.json  build.yml  managemytime.cabal  stack-ghc-7.10.yaml  stack-ghc-7.8.yaml  stack.yaml  tls.yml
app/: Main.hs
frontend/: index.html  main.html
frontend/css/: main.css
frontend/src/: api.js  app.js
src/: ManageMyTime.hs  Models.hs  Types.hs
src/ManageMyTime/: Auth.hs  Docs.hs  Models.hs  Types.hs  UndecidableTypes.hs
src/ManageMyTime/Docs/: Undecidable.hs
test/: Integration.hs  Spec.hs
