name:                managemytime
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            None
license:             BSD3
license-file:        LICENSE
author:              Dario Bertini
maintainer:          berdario@gmail.com
-- copyright:
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     ManageMyTime
                     , ManageMyTime.Models
                     , ManageMyTime.Types
                     , ManageMyTime.UndecidableTypes
  build-depends:       base >= 4.7 && < 5
                     , servant
                     , servant-docs
                     , servant-server
                     , wai
                     , text
                     , bytestring
                     , aeson
                     , time
                     , bytestring-conversion
                     , network-uri
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , transformers
                     , scrypt
                     , containers
                     , errors
                     , either
  default-language:    Haskell2010

executable managemytime-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , managemytime
                     , servant-jquery
                     , warp
                     , warp-tls
                     , bytestring
  default-language:    Haskell2010

test-suite managemytime-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , managemytime
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

test-suite functional-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Integration.hs
  build-depends:       base
                     , tasty
                     , tasty-hunit
                     , managemytime
                     , servant-client
                     , servant
                     , either
                     , http-types
                     , directory
                     , transformers
                     , text
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010


source-repository head
  type:     git
  location: None
